Fixed Bug#1907, option of type GET_BOOL with arg type OPT_ARG did not call get_one_option().